--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
     "extends": "@react-native-community",
     "rules": {
         "quotes": [2, "double", { "avoidEscape": true }],
-        "comma-dangle": ["error", "always"],
+        "comma-dangle": [2, "always-multiline"]         
+
       }
 }
